--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -4,6 +4,19 @@
     <h1>My Cart</h1>
   </header>
 
+  <% if enhanced_cart.count == 0 %>
+
+  <div>
+    <h3>
+      It looks like your cart is empty.
+    <h3/>
+    <tbody>
+      <%= link_to "Fill up your cart here!", "/" %>
+    <tbody/>
+  <div/>
+
+  <% else %>
+
   <div class="panel panel-default items">
     <table class="table table-bordered">
       <thead>
@@ -48,5 +61,8 @@
       <% end %>
     </div>
   </div>
+  <% end %>
+
 
 </section>
+
