--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -14,9 +14,7 @@
         <li>
           <%= link_to 'Home', :root %>
         </li>
-        <li>
-        <%= link_to 'About us', :about %>
-        </li>
+
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
             Categories
@@ -28,6 +26,9 @@
             <% end %>
           </ul>
         </li>
+        <li>
+        <%= link_to 'About us', :about %>
+      </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
        <li class="dropdown">
@@ -39,6 +40,7 @@
           <ul class="dropdown-menu">
             <li><%= link_to 'Dashboard', [:admin, :root] %></li>
             <li><%= link_to 'Products',  [:admin, :products] %></li>
+            <li><%= link_to 'Categories',  [:admin, :categories] %></li>
           </ul>
         </li>
         <li>
