functioning login/logout/signup options. error message popups to be added at a later date

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,3 +15,10 @@ body {
 form.button_to {
   display: inline;
 }
+
+li.user {
+  margin-top: 1.03em;
+  margin-right: 1em;
+  text-align: center;
+  list-style: none;
+}
