--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -14,7 +14,6 @@
         <li>
           <%= link_to 'Home', :root %>
         </li>
-
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
             Categories
@@ -31,6 +30,16 @@
       </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
+
+      <% if current_user %>
+        <li class="user">Signed in as <%= current_user.first_name %> <%= current_user.last_name %></li>  
+        <li><%= link_to "Logout", '/logout' %></li>
+
+      <% else %>
+        <li><%= link_to 'Login', '/login' %></li>
+        <li><%= link_to 'Signup', '/signup' %></li>
+      <% end %>
+      
        <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
 
@@ -43,11 +52,13 @@
             <li><%= link_to 'Categories',  [:admin, :categories] %></li>
           </ul>
         </li>
+        
         <li>
           <%= link_to cart_path do %>
             <%= fa_icon "shopping-cart" %> My Cart (<%= cart.size %>)
           <% end %>
         </li>
+
       </ul>
     </div>
   </div>
